# mentor-bot

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
auth_service/: .env.example  .ruff.toml  Dockerfile  pyproject.toml
auth_service/auth_service/: __init__.py  config.py  main.py
auth_service/auth_service/api/: __init__.py  deps.py
auth_service/auth_service/core/: __init__.py  enums.py  exceptions.py  security.py  telegram.py
auth_service/auth_service/database/: __init__.py  base.py
auth_service/auth_service/middleware/: request_id.py
auth_service/auth_service/models/: __init__.py  department.py  invitation.py  invitation_status_history.py  login_history.py  logout_history.py  mentor_assignment_history.py  password_change_history.py  password_reset.py  role_change_history.py  user.py  user_mentor.py
auth_service/auth_service/repositories/: __init__.py  unit_of_work.py
auth_service/auth_service/schemas/: __init__.py  auth.py  department.py  invitation.py  password_reset.py  user.py  user_mentor.py
auth_service/auth_service/services/: __init__.py  auth.py  department.py  invitation.py  password_reset.py  user.py  user_cleanup.py
auth_service/auth_service/utils/: __init__.py  department_sync.py  http.py  integrations.py  telegram_events.py
auth_service/migrations/: env.py
auth_service/migrations/versions/: 20260423_1547_initial_schema.py  20260425_1440_initial_schema.py  20260426_1200_add_user_preferences.py  20260426_add_audit_tables.py  20260504_add_logout_history.py  20260510_initial_schema.py
auth_service/tests/: conftest.py
auth_service/tests/unit/: __init__.py  test_main.py
checklists_service/: .ruff.toml  Dockerfile  coverage.json  pyproject.toml
checklists_service/checklists_service/: __init__.py  config.py  main.py
checklists_service/checklists_service/api/: __init__.py  deps.py  internal.py
checklists_service/checklists_service/core/: __init__.py  enums.py  exceptions.py  security.py
checklists_service/checklists_service/database/: __init__.py  base.py
checklists_service/checklists_service/middleware/: __init__.py  auth.py  request_id.py
checklists_service/checklists_service/models/: __init__.py  certificate.py  checklist.py  checklist_status_history.py  department.py  task_completion_history.py  template.py  template_change_history.py
checklists_service/checklists_service/repositories/: __init__.py  unit_of_work.py
checklists_service/checklists_service/schemas/: __init__.py  checklist.py  department.py  task.py  template.py
checklists_service/checklists_service/services/: __init__.py  certificate_generator.py  checklist.py  circuit_breaker.py  task.py  template.py
checklists_service/checklists_service/utils/: __init__.py  cache.py  http.py  integrations.py  logging.py  storage.py
checklists_service/migrations/: env.py
checklists_service/migrations/versions/: 20260423_1547_initial_schema.py  20260425_1440_initial_schema.py  20260426_add_audit_tables.py  20260429_2000_add_certificates.py  20260510_initial_schema.py
checklists_service/templates/: certificate_en.html  certificate_ru.html
checklists_service/tests/: __init__.py  conftest.py  test_certificate_generator.py  test_certificate_repository.py  test_certificates_api.py
checklists_service/tests/integration/: conftest.py  test_templates_integration.py  test_uow_commits.py
checklists_service/tests/unit/: __init__.py  test_database.py  test_deps.py  test_main.py
feedback_service/: .ruff.toml  Dockerfile  alembic.ini  pyproject.toml
feedback_service/feedback_service/: __init__.py  config.py  database.py  main.py
feedback_service/feedback_service/api/: __init__.py  deps.py
feedback_service/feedback_service/core/: __init__.py  enums.py
feedback_service/feedback_service/middleware/: request_id.py
feedback_service/feedback_service/models/: __init__.py  comment.py  experience_rating.py  feedback_status_change_history.py  pulse_survey.py
feedback_service/feedback_service/repositories/: __init__.py  unit_of_work.py
feedback_service/feedback_service/schemas/: __init__.py  comment.py  experience_rating.py  pulse_survey.py  responses.py
feedback_service/feedback_service/services/: __init__.py  notification_client.py
feedback_service/feedback_service/utils/: http.py
feedback_service/migrations/: env.py
feedback_service/migrations/versions/: 20260423_1547_initial_schema.py  20260425_1441_initial_schema.py  20260426_add_audit_tables.py  20260504_add_feedback_status_change_history.py  20260510_initial_schema.py
feedback_service/tests/: __init__.py  conftest.py
feedback_service/tests/unit/: __init__.py  test_database.py  test_main.py
meeting_service/: Dockerfile  pyproject.toml
meeting_service/meeting_service/: __init__.py  config.py  database.py  main.py
meeting_service/meeting_service/api/: __init__.py  deps.py  internal.py
meeting_service/meeting_service/core/: __init__.py  enums.py  exceptions.py
meeting_service/meeting_service/middleware/: request_id.py
meeting_service/meeting_service/models/: __init__.py  department.py  google_calendar_account.py  material.py  meeting.py  meeting_participant_history.py  meeting_status_change_history.py  user_meeting.py
meeting_service/meeting_service/repositories/: __init__.py  unit_of_work.py
meeting_service/meeting_service/schemas/: __init__.py  material.py  meeting.py  user_meeting.py
meeting_service/meeting_service/services/: __init__.py  google_calendar_service.py  meeting.py
meeting_service/meeting_service/utils/: __init__.py  cache.py  http.py  integrations.py  logging.py
meeting_service/migrations/: env.py
meeting_service/migrations/versions/: 20260423_1547_initial_schema.py  20260425_1441_initial_schema.py  (+3 more)
meeting_service/tests/: __init__.py  conftest.py
telegram_bot/: .ruff.toml  Dockerfile  pyproject.toml
telegram_bot/telegram_bot/: __init__.py  bot.py  config.py  main.py
telegram_bot/tests/: __init__.py  conftest.py
(+1314 files in other folders)
