[project]
name = "mentor-bot"
version = "1.0.0"
description = "Mentor Bot for Company Employees"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Andrusievich Roman", email = "andrroman07@gmail.com" }]
dependencies = [
    "aiofiles>=25.1.0",
    "aiogram>=3.27.0",
    "aiohttp-socks>=0.11.0",
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "boto3>=1.42.96",
    "debugpy>=1.8.20",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-i18n>=0.3.9",
    "python-multipart>=0.0.26",
    "python-slugify>=8.0.4",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio,mypy]>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
  "boto3-stubs>=1.42.94",
  "debugpy>=1.8.20",
  "freezegun>=1.5.5",
  "google-api-python-client-stubs>=1.35.0",
  "google-auth-stubs>=0.3.0",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.14",
]

[project.urls]
Homepage = "https://github.com/Roman-Andr/mentor-bot"
Documentation = "https://github.com/Roman-Andr/mentor-bot#readme"
Issues = "https://github.com/Roman-Andr/mentor-bot/issues"
Source = "https://github.com/Roman-Andr/mentor-bot"

[tool.mypy]
exclude = ["tests", "migrations"]
