[project]
name = "mentor-bot"
version = "1.0.0"
description = "Mentor Bot for Company Employees"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Andrusievich Roman", email = "andrroman07@gmail.com" }]
dependencies = [
    "aiofiles>=25.1.0",
    "aiogram>=3.27.0",
    "aiohttp-socks>=0.11.0",
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "boto3>=1.43.0",
    "debugpy>=1.8.20",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-i18n>=0.3.9",
    "python-multipart>=0.0.27",
    "python-slugify>=8.0.4",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio,mypy]>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
  "boto3-stubs>=1.42.94",
  "debugpy>=1.8.20",
  "freezegun>=1.5.5",
  "google-api-python-client-stubs>=1.35.0",
  "google-auth-stubs>=0.3.0",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.14",
]

[project.urls]
Homepage = "https://github.com/Roman-Andr/mentor-bot"
Documentation = "https://github.com/Roman-Andr/mentor-bot#readme"
Issues = "https://github.com/Roman-Andr/mentor-bot/issues"
Source = "https://github.com/Roman-Andr/mentor-bot"

[tool.mypy]
exclude = ["tests", "migrations"]

[tool.ruff]
exclude = ["*/migrations/*", "migrations"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D212",
    "D203",
    "D400",
    "D415",
    "D212",
    "PLR0913",
    "COM812",
    "TRY301",
    "RUF001",
    "S301",
    "C901",
    "PLR0912",
    "PLR0915",
    "BLE001",
    "ANN401",
    "ANN202",
    "ANN003",
    "TC003",
    "TC004",
    # Project-wide ignores (Step 1)
    "D100", "D104", "D105", "D107",  # Don't enforce module/package/__magic__/__init__ docstrings
    "D401",  # Imperative mood too noisy for Russian/English-mixed prose
    "FAST001",  # response_model= set intentionally for OpenAPI clarity
    "B008",  # Depends/Query/File in defaults is canonical FastAPI pattern (until Annotated refactor)
    "EM101", "EM102", "TRY003",  # Don't force custom exception class for every one-off error
    "PLC0415",  # Lazy imports used deliberately to break circular deps
    "FBT001", "FBT002", "FBT003",  # Boolean-trap rule produces too many false positives
    "PLR2004",  # Magic-value comparison flags HTTP status codes, ports, retry counts
    "RUF012",  # ClassVar on mutable defaults - Pydantic/SQLAlchemy models don't follow this
    "G004",  # Logging f-strings - loguru handles these fine
    "INP001",  # Implicit namespace packages - false positives on tests/scripts/migrations
    "E501",  # Line too long - long lines are usually log messages, URLs, or localization strings
    "N806",  # Variable naming - preference, not a bug
    "PLW1641",  # __hash__ implementation - preference, not a bug
    "SLF001",  # Private member access - sometimes needed for repository patterns
    "TC005",  # Empty type-checking blocks - cleanup after moving imports
    "RUF100",  # Unused noqa directives - cleanup after adding ignores
    "SIM102",  # Nested if statements - preference, not a bug
    "A004",    # Import shadowing builtin - custom exceptions
    "A001",    # Variable shadowing builtin - custom exceptions
    "PLW0603", # Global statement - singleton pattern
    "TRY002",  # Create your own exception - test mocks
    "DTZ011",  # datetime.date.today() - test fixtures
    "PLR1714", # Merge multiple comparisons - preference
    "RUF005",  # List unpacking - preference
    "ARG002",  # Unused method argument - interface compatibility
    "ERA001",  # Commented-out code - documentation
    "SIM108",  # Ternary operator - readability preference
    "ANN201",  # Missing return type annotation - FastAPI deps
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",      # assert is the point
    "ANN001", "ANN002", "ANN201", "ANN202", "ANN204",
    "SLF001",    # private access for white-box testing
    "ANN401",
    "PLR2004",
    "SIM117",
    "PT011", "PT012", "PT019",
    "B017",
    "S105", "S106", "S107",   # fake passwords / tokens in fixtures are fine
    "D100", "D101", "D102", "D103", "D104", "D106",   # tests don't need docstrings
    "INP001",
    "PLC0415",
    "ARG001", "ARG002",
    "F841",      # often used for "we don't care about return value" in tests
    "FBT001", "FBT002", "FBT003",   # boolean positional values in tests are fine
    "EM101", "EM102",   # string literals in exceptions in tests are fine
    "TRY003",   # vanilla args in exceptions in tests are fine
    "E402",      # late imports for test fixtures/mocks
    "DTZ005",    # datetime.now() without tz in test fixtures
    "RET504",    # unnecessary assignment in test helpers
    "T201",      # print statements in test debugging
    "A002",      # shadowing builtin in test fixtures
]
"**/migrations/**/*.py" = ["ALL"]   # alembic-generated; do not lint
"scripts/**/*.py" = ["INP001", "T201", "S101", "DTZ005", "ARG001", "PTH123", "S603", "S607", "PLW1510", "PTH110", "PTH118", "S314", "ANN001", "ANN002", "ANN201", "S608", "RET504", "B905", "ERA001", "A002"]
"**/api/**/*.py" = ["ARG001", "ARG002", "ANN001", "ANN206"]   # FastAPI Depends params often unused by name + schema methods
"telegram_bot/telegram_bot/handlers/**/*.py" = ["ARG001", "ARG002", "E402"]   # aiogram DI + logger setup before imports
"telegram_bot/telegram_bot/keyboards/**/*.py" = ["ARG001"]   # keyboard params often unused
"telegram_bot/**/*.py" = ["TRY401"]   # redundant exception in logging.exception
"**/conftest.py" = ["ANN001", "ANN201", "ARG001"]

[tool.ruff.format]
quote-style = "double"
