[project]
name = "auth_service"
version = "1.0.0"
description = "Authentication and User Management Microservice"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Andrusievich Roman", email = "andrroman07@gmail.com"}
]
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["auth_service"]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 95
show_missing = true
skip_covered = false

[project.urls]
Homepage = "https://github.com/Roman-Andr/mentor-bot"
Documentation = "https://github.com/Roman-Andr/mentor-bot#readme"
Issues = "https://github.com/Roman-Andr/mentor-bot/issues"
Source = "https://github.com/Roman-Andr/mentor-bot"
