[project]
name = "telegram-bot"
version = "1.0.0"
description = "Mentor Bot for Company Employees"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Andrusievich Roman", email = "andrroman07@gmail.com" }]
dependencies = [
  "aiofiles>=25.1.0",
  "aiogram>=3.26.0",
  "apscheduler>=3.11.2",
  "email-validator>=2.3.0",
  "fastapi>=0.128.0",
  "passlib[bcrypt]>=1.7.4",
  "asyncpg>=0.31.0",
  "psycopg2-binary>=2.9.11",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.2.1",
  "python-multipart>=0.0.21",
  "redis>=7.1.0",
  "sqlalchemy[asyncio,mypy]>=2.0.46",
  "uvicorn[standard]>=0.40.0",
  "google-auth-httplib2>=0.3.0",
  "google-auth-oauthlib>=1.2.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.14",
]

[project.urls]
Homepage = "https://github.com/Roman-Andr/mentor-bot"
Documentation = "https://github.com/Roman-Andr/mentor-bot#readme"
Issues = "https://github.com/Roman-Andr/mentor-bot/issues"
Source = "https://github.com/Roman-Andr/mentor-bot"
