[project]
name = "telegram-bot"
version = "1.0.0"
description = "Mentor Bot for Company Employees"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Andrusievich Roman", email = "andrroman07@gmail.com" }]
dependencies = [
    "aiogram>=3.27.0",
    "aiohttp-socks>=0.11.0",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "debugpy>=1.8.20",
    "fastapi>=0.136.1",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-i18n>=0.3.9",
    "redis>=7.4.0",
    "sqlalchemy[asyncio,mypy]>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[project.urls]
Homepage = "https://github.com/Roman-Andr/mentor-bot"
Documentation = "https://github.com/Roman-Andr/mentor-bot#readme"
Issues = "https://github.com/Roman-Andr/mentor-bot/issues"
Source = "https://github.com/Roman-Andr/mentor-bot"

[tool.coverage.run]
source = ["telegram_bot"]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 100
show_missing = true
skip_covered = false
